--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Scripts para gerar mapas espaciais da precipitação acumulada na cidade do Rio de Janeiro, nas escalas mensal, sazonal e anual. 
+Scripts para gerar mapas espaciais da precipitação acumulada na cidade do Rio de Janeiro, nas escalas mensal, sazonal e anual. Pode ser adaptado para qualquer região/shape.
 Estão disponíveis duas versões:
   1. Utilizando arquivos em netcdf4 (.nc)
   2. Utilizando dados de estação em arquivos separados por vírgula (.csv)
